--- a/styles.css
+++ b/styles.css
@@ -1,170 +1,146 @@
 :root {
-    --background-color:#373F51;
-    --font:#A9BCD0;
-    --header-background-color:#1B1B1E;
-    --accent:#58A4B0;
-    --skills-bg:#d8dbe2;
-    --font-size18:1.125rem;
-    --font-size88:5.5rem;
-    --font-size48:3rem;
-    --font-size24:1.5rem;
-    --line-height:1.56rem;
-    
-    
-    
+  --background-color: #373f51;
+  --font: #a9bcd0;
+  --header-background-color: #1b1b1e;
+  --accent: #58a4b0;
+  --skills-bg: #d8dbe2;
+  --font-size18: 1.125rem;
+  --font-size88: 5.5rem;
+  --font-size48: 3rem;
+  --font-size24: 1.5rem;
+  --line-height: 1.56rem;
 }
 
-html{
-    box-sizing: border-box;
-   
+html {
+  box-sizing: border-box;
 }
 * {
-    /* border: 3px solid red; */
-    padding: 0;
-    margin: 0;
-    box-sizing: inherit;
+  /* border: 3px solid red; */
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
 }
 
-body{
-    margin: 0;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
-    background-color: var(--background-color);
-    font-size: var(--font-size18);
-    line-height: 1.586;
-    color: var(--font);
+body {
+  margin: 0;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: var(--background-color);
+  font-size: var(--font-size18);
+  line-height: 1.586;
+  color: var(--font);
 }
 
 a {
-    text-decoration: none;
-    color: var(--font);
+  text-decoration: none;
+  color: var(--font);
 }
 
 span {
-    color: var(--accent);
+  color: var(--accent);
 }
 
 /* Header-Nav */
-.header  {
-    box-shadow: .5rem .5rem .5rem var(--accent);
-    padding: 1rem;
-    background-color: var(--header-background-color);
+.header {
+  box-shadow: 0.5rem 0.5rem 0.5rem var(--accent);
+  padding: 1rem;
+  background-color: var(--header-background-color);
 }
 
-
 .navbar {
-    
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .navbar a {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 /* Hero */
 .myphoto {
-    border-radius: 50%;
+  border-radius: 50%;
 }
 
 .hero {
-    display: flex;
-    justify-content: space-around;
-    padding: 5rem;
-    font-size: xx-large;
-
+  display: flex;
+  justify-content: space-around;
+  padding: 5rem;
+  font-size: xx-large;
 }
 
 .hero-title {
-    margin-top: 5rem;
-}
-    
-
- #aboutMe {
-    color: var(--font);
-    padding: 1rem ;
-    margin: 1rem ;
+  margin-top: 5rem;
 }
 
-
+#aboutMe {
+  color: var(--font);
+  padding: 1rem;
+  margin: 1rem;
+}
 
 /* Projects */
 
 #projects {
-    background-color: var(--accent);
-    color: var(--background-color);
+  background-color: var(--accent);
+  color: var(--background-color);
 }
-
-
-
 
 .project-grid {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 5rem;
-   
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 5rem;
 }
 
-.portfolio-screenshot  {
-    
-    box-shadow: 1rem 1rem 1rem var(--background-color);
+.portfolio-screenshot {
+  box-shadow: 1rem 1rem 1rem var(--background-color);
 }
-
 
 .projects-title {
-    padding: 1rem;
-    margin: 1rem ;
+  padding: 1rem;
+  margin: 1rem;
 }
 
-.project-item  {
-    padding: 1rem;
-    margin: 1rem ;
+.project-item {
+  padding: 1rem;
+  margin: 1rem;
 }
-.project-title, .project-description   {
-    padding: 1rem;
-    margin: 1rem;
+.project-title,
+.project-description {
+  padding: 1rem;
+  margin: 1rem;
 }
 
-.project-link{
-    text-shadow: 1rem 1rem 1rem var(--background-color);
-    margin: 1rem;
+.project-link {
+  text-shadow: 1rem 1rem 1rem var(--background-color);
+  margin: 1rem;
 }
 
 /* Skills */
 
 #skills {
-    background-color: var(--skills-bg);
-    color: var(--background-color);
-    padding: 1rem;
-    margin: 1rem;
-    gap: 1rem;
-   
-   
+  background-color: var(--skills-bg);
+  color: var(--background-color);
+  padding: 1rem;
+  margin: 1rem;
+  gap: 1rem;
 }
 
 #skills > h2 {
-    
-    /* padding: 1rem;
+  /* padding: 1rem;
     margin: 1rem; */
 }
 
 .skills-grid-wrapper {
-   
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    text-align: center;
-    /* padding: 1rem;
-    margin: 1rem; */
-    font-size: 2rem;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  text-align: center;
+  font-size: 2rem;
 }
 /* Footer */
 
 .contact-links {
-    display: flex;
-    justify-content: space-around;
-    padding: 1rem;
-    margin: 1rem ;
-
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+  margin: 1rem;
 }
-
-
-
